Network/tf-securitygroup.tf
resource "aws_security_group" "ec2_sg" {
  name        = "allow-ssh"
  description = "Allow ssh inbound traffic"
  vpc_id      = aws_vpc.primary.id

  ingress {
    description = "TLS from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["174.117.111.63/32"]

  }
  ingress {
    description = "TLS from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["174.117.111.63/32"]

  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = {
    Name = "allow-ssh"
    Env  = "Dev"
  }
}
